--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 </div>
                 <div class="conteudo">
                     <h1>Sobre</h1>
-                    <p id="texto1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit sint, unde perferendis doloribus cupiditate repellendus nostrum totam ipsa neque modi sed commodi laborum dicta esse blanditiis, asperiores reprehenderit repellat ex.</p>
+                    <p id="texto1">Chico Xavier foi um famoso médium e escritor brasileiro, considerado uma das figuras mais importantes e influentes do espiritismo no Brasil e            no         mundo. Ele nasceu em 2 de abril de 1910, em Pedro Leopoldo, Minas Gerais, e faleceu em 30 de junho de 2002.
+                        Desde jovem, Chico Xavier demonstrou habilidades mediúnicas, afirmando receber mensagens e comunicações espirituais. Ele se dedicou à psicografia, que é a habilidade de escrever mensagens ditadas por espíritos. </p>
                 </div>
             </div>
         </section>
@@ -172,40 +173,41 @@
         </section>
 
         <section class="terceira-section" id="Obras">
+            <h1 style="font-size: 40px;">Obras de Chico Xavier</h1>
             <div class="div-pai">
                 <div class="imagem">
-                    <img src="./assets/images.jpg" alt="algo">
+                    <img src="./assets/nosso-lar.jpg" alt="algo">
                 </div>
                 <div class="conteudo">
-                    <h1>Titulo</h1>
-                    <p>texto</p>
+                    <h1>Nosso Lar</h1>
+                    <p class="texto-obras">Psicografado pelo espírito André Luiz, é considerado um dos livros mais conhecidos de Chico Xavier. Ele relata a vida após a morte, descrevendo a trajetória espiritual de um homem chamado André Luiz em diferentes regiões do plano espiritual.</p>
                 </div>
             </div>
             <div class="div-pai">
                 <div class="conteudo">
-                    <h1>Titulo</h1>
-                    <p>texto</p>
+                    <h1>O livro dos Espíritos</h1>
+                    <p class="texto-obras">Baseado nas obras de Allan Kardec, Chico Xavier psicografou essa importante obra espírita, que apresenta uma série de perguntas e respostas sobre a filosofia e os princípios do espiritismo.</p>
                 </div>
                 <div class="imagem">
-                    <img src="./assets/images.jpg" alt="algo">
+                    <img style="width: 50%;" src="./assets/livros-espiritos.webp" alt="algo">
                 </div>
             </div>
             <div class="div-pai">
                 <div class="imagem">
-                    <img src="./assets/images.jpg" alt="algo">
+                    <img src="./assets/a-dois-milanos.jpg" alt="algo">
                 </div>
                 <div class="conteudo">
-                    <h1>Titulo</h1>
-                    <p>texto</p>
+                    <h1>Há 2000 Anos</h1>
+                    <p class="texto-obras">Nesta obra, Chico Xavier relata a história de um espírito que reencarna na Roma Antiga, vivenciando experiências marcantes durante o período em que Jesus esteve na Terra.</p>
                 </div>
             </div>
             <div class="div-pai">
                 <div class="conteudo">
-                    <h1>Titulo</h1>
-                    <p>texto</p>
+                    <h1>E a Vida Continua...</h1>
+                    <p class="texto-obras"> Também psicografado pelo espírito André Luiz, esse livro aborda a continuidade da vida após a morte, mostrando como os espíritos lidam com suas necessidades, aprendizados e renovações no plano espiritual.</p>
                 </div>
                 <div class="imagem">
-                    <img src="./assets/images.jpg" alt="algo">
+                    <img src="./assets/vida-continua.jpg" alt="algo">
                 </div>
             </div>
         </section>
